@@ -33,20 +33,37 @@ import org.languagetool.tagging.Tagger;
 import org.languagetool.tagging.disambiguation.Disambiguator;
 import org.languagetool.tagging.disambiguation.ru.RussianHybridDisambiguator;
 import org.languagetool.tagging.ru.RussianTagger;
-import org.languagetool.tokenizers.ru.RussianWordTokenizer;
 import org.languagetool.tokenizers.SRXSentenceTokenizer;
 import org.languagetool.tokenizers.SentenceTokenizer;
 import org.languagetool.tokenizers.Tokenizer;
+import org.languagetool.tokenizers.ru.RussianWordTokenizer;
 
-import java.io.File;
 import java.io.IOException;
-import java.util.*;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Objects;
+import java.util.ResourceBundle;
 import java.util.regex.Pattern;
 
-public class Russian extends Language implements AutoCloseable {
+public class Russian extends LanguageWithModel {
 
-  private LanguageModel languageModel;
+  private static final String LANGUAGE_SHORT_CODE = "ru";
 
+  private static volatile Throwable instantiationTrace;
+
+  public Russian() {
+    Throwable trace = instantiationTrace;
+    if (trace != null) {
+      throw new RuntimeException("Language was already instantiated, see the cause stacktrace below.", trace);
+    }
+    instantiationTrace = new Throwable();
+  }
+
+  /**
+   * This is a fake constructor overload for the subclasses. Public constructors can only be used by the LT itself.
+   */
+  protected Russian(boolean fakeValue) {
+  }
   @Override
   public Pattern getIgnoredCharactersRegex() {
     return Pattern.compile("[\u00AD\u0301\u0300]");
@@ -59,7 +76,7 @@ public class Russian extends Language implements AutoCloseable {
 
   @Override
   public String getShortCode() {
-    return "ru";
+    return LANGUAGE_SHORT_CODE;
   }
 
   @Override
@@ -75,9 +92,8 @@ public class Russian extends Language implements AutoCloseable {
 
   @Override
   public Disambiguator createDefaultDisambiguator() {
-    return RussianHybridDisambiguator.INSTANCE;
+    return RussianHybridDisambiguator.getInstance();
   }
-
 
   @Nullable
   @Override
@@ -183,28 +199,10 @@ public class Russian extends Language implements AutoCloseable {
 
   /** @since 3.1 */
   @Override
-  public synchronized LanguageModel getLanguageModel(File indexDir) throws IOException {
-    languageModel = initLanguageModel(indexDir, languageModel);
-    return languageModel;
-  }
-
-  /** @since 3.1 */
-  @Override
   public List<Rule> getRelevantLanguageModelRules(ResourceBundle messages, LanguageModel languageModel, UserConfig userConfig) throws IOException {
-    return Arrays.asList(
-            new RussianConfusionProbabilityRule(messages, languageModel, this)
+    return List.of(
+      new RussianConfusionProbabilityRule(messages, languageModel, this)
     );
-  }
-
-  /**
-   * Closes the language model, if any. 
-   * @since 3.1
-   */
-  @Override
-  public void close() throws Exception {
-    if (languageModel != null) {
-      languageModel.close();
-    }
   }
 
   /** @since 3.3 */
@@ -235,5 +233,13 @@ public class Russian extends Language implements AutoCloseable {
   @Override
   protected SpellingCheckRule createDefaultSpellingRule(ResourceBundle messages) throws IOException {
     return new MorfologikRussianSpellerRule(messages, this, null, null);
+  }
+
+  public static @NotNull Russian getInstance() {
+    Language language = Objects.requireNonNull(Languages.getLanguageForShortCode(LANGUAGE_SHORT_CODE));
+    if (language instanceof Russian russian) {
+      return russian;
+    }
+    throw new RuntimeException("Russian language expected, got " + language);
   }
 }
